Bug 86001 - Calc: FORMATTING Cannot turn spell check off by selecting Language [None]
Summary: Calc: FORMATTING Cannot turn spell check off by selecting Language [None]
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: low minor
Assignee: Kohei Yoshida
URL:
Whiteboard: target:5.4.0 target:5.3.4
Keywords: bibisected, bisected, regression
: 76123 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-11-07 12:48 UTC by David Lynch
Modified: 2017-05-14 20:55 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Lynch 2014-11-07 12:48:07 UTC
I have default language for documents Options->Language Setttings->Languages set to English(UK)

Open a new spreadsheet:
Type a lower case i in A1. A1, correctly now has i with a red wavy underlining indicating a spelling error.
Select A1 and A2, CNTL-1->Font and change to Language[None].
Red wavy underlining indicating a spelling error remains in A1.
However, typing i in A2 gives an i without underlining.
But selecting A1 and A2 again then CNTL-X and CNTL-V gives wavy underlining in both A1 and A2. (CNTL-1->Font still gives Language[None].)
Comment 1 dpage.FOSS 2014-11-19 23:15:06 UTC
Confirmed on Windows 7, Libre Office Version 4.3.4.1.
To confirm had to turn off auto correct replace i with I and
used right click/select format cells instead of cntrl-1

Set to minor - low, because it does not prevent professional quality work, but can slow it down.  

Please do not to change the priority/severity without knowing how we use these fields internally.  Thank you.
Comment 2 Matthew Francis 2015-04-22 14:01:49 UTC
This broke at the below commit.

commit 80ecd30e1c7b753f2b24147e47204c97d253d394
Author: Kohei Yoshida <kohei.yoshida@gmail.com>
Date:   Tue Mar 27 14:19:31 2012 -0400

    It's cleaner to use copy ctor for cloning.


Before this commit, WrongList::Clone() always set nInvalidStart = 0 and nInvalidEnd = 0xFFFF as a result of using the default constructor, rather than actually cloning the current values. Immediately after the commit, restoring this behaviour fixes the issue, but whatever the solution is now isn't that - the semantics appear to have changed in the interim.
Comment 3 Robinson Tryon (qubit) 2015-12-13 11:10:57 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2016-10-03 09:23:55 UTC
Adding Cc: to Kohei Yoshida
Comment 5 Tristan Miller 2017-01-22 13:39:24 UTC
Is this bug a duplicate of Bug 76123?
Comment 6 Kohei Yoshida 2017-05-05 00:56:33 UTC
I'm currently looking into this.
Comment 7 Kohei Yoshida 2017-05-05 22:54:05 UTC
*** Bug 76123 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2017-05-05 22:56:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb35ead64b1371ea27420b57387ff1db0cbbbcf6

tdf#86001: Pass on the language info from the cell to the engine.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2017-05-05 23:01:01 UTC
Backport for 5.3: https://gerrit.libreoffice.org/#/c/37308/
Comment 10 Kohei Yoshida 2017-05-08 23:41:20 UTC
I'll mark this fixed.
Comment 11 Commit Notification 2017-05-10 22:21:03 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5fa3a5cd075bfc6607c76b9be41310a24fec17f2&h=libreoffice-5-3

tdf#86001: Pass on the language info from the cell to the engine.

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Thomas Lendo 2017-05-14 20:55:27 UTC
Kohei, thank you!

Tested with Version: 5.4.0.0.alpha1+
Build ID: b82c9439287f58a02a2b42d737fcf110fbfb1244
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-05-14_01:01:26
Locale: de-DE (de_DE.UTF-8); Calc: group

Set to VERIFIED FIXED.