tdf#86001: Pass on the language info from the cell to the engine.

So that it can be used to set the correct language to use to check
spelling (or disable it altogether).

Reviewed-on: https://gerrit.libreoffice.org/37307
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Kohei Yoshida <libreoffice@kohei.us>
(cherry picked from commit eb35ead64b1371ea27420b57387ff1db0cbbbcf6)

 Conflicts:
	sc/source/ui/view/gridwin.cxx

Change-Id: I4fddd9a7e08ab55476566db98476794b2fc1eb13
Reviewed-on: https://gerrit.libreoffice.org/37308
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>